--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.SeviBus4" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.SeviBus4" parent="Theme.AppCompat.DayNight.NoActionBar"></style>
+
+    <!-- This theme is used by splashScreen.setSplashScreenTheme() to force a dark background when the user has forced dark mode. -->
+    <style name="Theme.SeviBus4.Dark">
+        <item name="android:windowSplashScreenBackground">#FF353238</item>
+    </style>
 </resources>
