--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,4 +7,14 @@
     <style name="Theme.SeviBus4.Dark">
         <item name="android:windowSplashScreenBackground">#FF353238</item>
     </style>
+
+    <style name="Theme.SeviBus4.Translucent">
+        <item name="android:windowBackground">#00ffffff</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:statusBarColor">#00ffffff</item>
+    </style>
 </resources>
